--- a/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
+++ b/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
@@ -2,6 +2,8 @@
 network = ReteSwitched
 
 **.customDatarate = 10
+**.numQ = 1
+
 **.host1.numApps = 1
 **.host2.numApps = 1
 **.host3.numApps = 1
@@ -76,4 +78,9 @@ network = ReteSwitched
 #Switch info
 **.switch.relayUnit.typename = "MacRelayUnit"
 **.switch.macTable.addressTableFile = "switchAddressFile.txt"
+
+# Queue
+**.cQueue.numQueues = 3
+**.cQueue.classifier.typename = "WrrClassifier"
+**.cQueue.classifier.weights = "1 1 1"
 
