--- a/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
+++ b/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
@@ -14,7 +14,8 @@ network = ReteSwitched
 #Host 8 receiver
 **.host8.app[0].typename = "UdpSink"
 **.host8.app[0].localPort = 8000
-#Host 0 to 6 are senders
+**.host8.eth[*].mac.queue.typename = "EtherQosQueue"
+#Host 1 to 7 are senders
 **.host1.app[0].typename = "UdpBasicApp"
 **.host1.app[0].destPort = 8000
 **.host1.app[0].destAddresses = "host8" #Default (modulepath) 
