Applied the CompoundPriorityQueue to Sink host

--- a/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
+++ b/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
@@ -16,6 +16,7 @@ network = ReteSwitched
 #Host 8 receiver
 **.host8.app[0].typename = "UdpSink"
 **.host8.app[0].localPort = 8000
+**.host8.eth[*].mac.queue.typename = "CompoundPriorityQueue"
 #Host 0 to 6 are senders
 **.host1.app[0].typename = "UdpBasicApp"
 **.host1.app[0].destPort = 8000
