Working DSCP-based priority queue

--- a/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
+++ b/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
@@ -16,49 +16,62 @@ network = ReteSwitched
 #Host 8 receiver
 **.host8.app[0].typename = "UdpSink"
 **.host8.app[0].localPort = 8000
-**.host8.eth[*].mac.queue.typename = "CompoundPriorityQueue"
+//**.host8.eth[*].mac.queue.typename = "CompoundPriorityQueue"
+
+//**.host8.eth[*].mac.queue.classifier.typename = "ContentBasedClassifier"
+//**.host8.eth[*].mac.queue.classifier.packetFilters = "*; *; *"
+//**.host8.eth[*].mac.queue.classifier.packetDataFilters = "inet::ByteCountChunk AND data =~ 0; inet::ByteCountChunk AND data =~ 1; inet::ByteCountChunk AND data =~ 2;"
+
+
 #Host 0 to 6 are senders
 **.host1.app[0].typename = "UdpBasicApp"
 **.host1.app[0].destPort = 8000
 **.host1.app[0].destAddresses = "host8" #Default (modulepath) 
 **.host1.app[0].messageLength = 100B
 **.host1.app[0].startTime = uniform(0s, 10ms) #Change start time
+**.host1.app[0].dscp = 0x08
 
 **.host2.app[0].typename = "UdpBasicApp"
 **.host2.app[0].destPort = 8000
 **.host2.app[0].destAddresses = "host8" #Default (modulepath) 
 **.host2.app[0].messageLength = 100B
 **.host2.app[0].startTime = uniform(0s, 10ms) #Change start time
+**.host2.app[0].dscp = 0x08
 
 **.host3.app[0].typename = "UdpBasicApp"
 **.host3.app[0].destPort = 8000
 **.host3.app[0].destAddresses = "host8" #Default (modulepath) 
 **.host3.app[0].messageLength = 100B
 **.host3.app[0].startTime = uniform(0s, 10ms) #Change start time
+**.host3.app[0].dscp = 0x08
 
 **.host4.app[0].typename = "UdpBasicApp"
 **.host4.app[0].destPort = 8000
 **.host4.app[0].destAddresses = "host8" #Default (modulepath) 
 **.host4.app[0].messageLength = 100B
 **.host4.app[0].startTime = uniform(0s, 10ms) #Change start time
+**.host4.app[0].dscp = 0x10
 
 **.host5.app[0].typename = "UdpBasicApp"
 **.host5.app[0].destPort = 8000
 **.host5.app[0].destAddresses = "host8" #Default (modulepath) 
 **.host5.app[0].messageLength = 100B
 **.host5.app[0].startTime = uniform(0s, 10ms) #Change start time
+**.host5.app[0].dscp = 0x10
 
 **.host6.app[0].typename = "UdpBasicApp"
 **.host6.app[0].destPort = 8000
 **.host6.app[0].destAddresses = "host8" #Default (modulepath) 
 **.host6.app[0].messageLength = 100B
 **.host6.app[0].startTime = uniform(0s, 10ms) #Change start time
+**.host6.app[0].dscp = 0x18
 
 **.host7.app[0].typename = "UdpBasicApp"
 **.host7.app[0].destPort = 8000
 **.host7.app[0].destAddresses = "host8" #Default (modulepath) 
 **.host7.app[0].messageLength = 100B
 **.host7.app[0].startTime = uniform(0s, 10ms) #Change start time
+**.host7.app[0].dscp = 0x18
 
 **.host1.app[0].sendInterval = 5ms
 **.host2.app[0].sendInterval = 10ms
@@ -79,9 +92,8 @@ network = ReteSwitched
 #Switch info
 **.switch.relayUnit.typename = "MacRelayUnit"
 **.switch.macTable.addressTableFile = "switchAddressFile.txt"
+**.switch.eth[7].mac.queue.typename = "CompoundPriorityQueue"
+**.switch.eth[7].mac.queue.classifier.typename = "BehaviorAggregateClassifier"
+**.switch.eth[7].mac.queue.classifier.dscps = "0x08 0x10 0x18"
 
-# Queue
-**.cQueue.numQueues = 3
-**.cQueue.classifier.typename = "WrrClassifier"
-**.cQueue.classifier.weights = "1 1 1"
 
