--- a/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
+++ b/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
@@ -1,99 +1,57 @@
 [General]
+description = DO NOT RUN, NEEDS TO BE EXTENDED
 network = ReteSwitched
 
-**.customDatarate = 10
-**.numQ = 1
+**.host[*].numApps = 1
+**.sinkHost.numApps = 1
 
-**.host1.numApps = 1
-**.host2.numApps = 1
-**.host3.numApps = 1
-**.host4.numApps = 1
-**.host5.numApps = 1
-**.host6.numApps = 1
-**.host7.numApps = 1
-**.host8.numApps = 1
+# Receiver: sinkHost
+**.sinkHost.app[0].typename = "UdpSink"
+**.sinkHost.app[0].localPort = 8000
 
-#Host 8 receiver
-**.host8.app[0].typename = "UdpSink"
-**.host8.app[0].localPort = 8000
-//**.host8.eth[*].mac.queue.typename = "CompoundPriorityQueue"
+# Senders: host[0..6]
+**.host[*].app[0].typename = "UdpBasicApp"
+**.host[*].app[0].destPort = 8000
+**.host[*].app[0].destAddresses = "sinkHost"
+**.host[*].app[0].messageLength = intuniform(100B, 1500B)
+**.host[*].app[0].startTime = uniform(0s, 10ms)
 
-//**.host8.eth[*].mac.queue.classifier.typename = "ContentBasedClassifier"
-//**.host8.eth[*].mac.queue.classifier.packetFilters = "*; *; *"
-//**.host8.eth[*].mac.queue.classifier.packetDataFilters = "inet::ByteCountChunk AND data =~ 0; inet::ByteCountChunk AND data =~ 1; inet::ByteCountChunk AND data =~ 2;"
+**.host[0].app[0].dscp = 0x08
+**.host[1].app[0].dscp = 0x0A
+**.host[2].app[0].dscp = 0x0C
+**.host[3].app[0].dscp = 0x0E
+**.host[4].app[0].dscp = 0x10
+**.host[5].app[0].dscp = 0x12
+**.host[6].app[0].dscp = 0x14
 
-
-#Host 0 to 6 are senders
-**.host1.app[0].typename = "UdpBasicApp"
-**.host1.app[0].destPort = 8000
-**.host1.app[0].destAddresses = "host8" #Default (modulepath) 
-**.host1.app[0].messageLength = 100B
-**.host1.app[0].startTime = uniform(0s, 10ms) #Change start time
-**.host1.app[0].dscp = 0x08
-
-**.host2.app[0].typename = "UdpBasicApp"
-**.host2.app[0].destPort = 8000
-**.host2.app[0].destAddresses = "host8" #Default (modulepath) 
-**.host2.app[0].messageLength = 100B
-**.host2.app[0].startTime = uniform(0s, 10ms) #Change start time
-**.host2.app[0].dscp = 0x08
-
-**.host3.app[0].typename = "UdpBasicApp"
-**.host3.app[0].destPort = 8000
-**.host3.app[0].destAddresses = "host8" #Default (modulepath) 
-**.host3.app[0].messageLength = 100B
-**.host3.app[0].startTime = uniform(0s, 10ms) #Change start time
-**.host3.app[0].dscp = 0x08
-
-**.host4.app[0].typename = "UdpBasicApp"
-**.host4.app[0].destPort = 8000
-**.host4.app[0].destAddresses = "host8" #Default (modulepath) 
-**.host4.app[0].messageLength = 100B
-**.host4.app[0].startTime = uniform(0s, 10ms) #Change start time
-**.host4.app[0].dscp = 0x10
-
-**.host5.app[0].typename = "UdpBasicApp"
-**.host5.app[0].destPort = 8000
-**.host5.app[0].destAddresses = "host8" #Default (modulepath) 
-**.host5.app[0].messageLength = 100B
-**.host5.app[0].startTime = uniform(0s, 10ms) #Change start time
-**.host5.app[0].dscp = 0x10
-
-**.host6.app[0].typename = "UdpBasicApp"
-**.host6.app[0].destPort = 8000
-**.host6.app[0].destAddresses = "host8" #Default (modulepath) 
-**.host6.app[0].messageLength = 100B
-**.host6.app[0].startTime = uniform(0s, 10ms) #Change start time
-**.host6.app[0].dscp = 0x18
-
-**.host7.app[0].typename = "UdpBasicApp"
-**.host7.app[0].destPort = 8000
-**.host7.app[0].destAddresses = "host8" #Default (modulepath) 
-**.host7.app[0].messageLength = 100B
-**.host7.app[0].startTime = uniform(0s, 10ms) #Change start time
-**.host7.app[0].dscp = 0x18
-
-**.host1.app[0].sendInterval = 5ms
-**.host2.app[0].sendInterval = 10ms
-**.host3.app[0].sendInterval = 15ms
-**.host4.app[0].sendInterval = 20ms
-**.host5.app[0].sendInterval = 25ms
-**.host6.app[0].sendInterval = 30ms
-**.host7.app[0].sendInterval = 35ms
-**.host1.app[0].packetName = "UDP_Data_Sender0"
-**.host2.app[0].packetName = "UDP_Data_Sender1"
-**.host3.app[0].packetName = "UDP_Data_Sender2"
-**.host4.app[0].packetName = "UDP_Data_Sender3"
-**.host5.app[0].packetName = "UDP_Data_Sender4"
-**.host6.app[0].packetName = "UDP_Data_Sender5"
-**.host7.app[0].packetName = "UDP_Data_Sender6"
+**.host[0].app[0].sendInterval = 5ms
+**.host[1].app[0].sendInterval = 10ms
+**.host[2].app[0].sendInterval = 15ms
+**.host[3].app[0].sendInterval = 20ms
+**.host[4].app[0].sendInterval = 25ms
+**.host[5].app[0].sendInterval = 30ms
+**.host[6].app[0].sendInterval = 35ms
+**.host[0].app[0].packetName = "UDP_Data_Sender0"
+**.host[1].app[0].packetName = "UDP_Data_Sender1"
+**.host[2].app[0].packetName = "UDP_Data_Sender2"
+**.host[3].app[0].packetName = "UDP_Data_Sender3"
+**.host[4].app[0].packetName = "UDP_Data_Sender4"
+**.host[5].app[0].packetName = "UDP_Data_Sender5"
+**.host[6].app[0].packetName = "UDP_Data_Sender6"
 
 
 #Switch info
 **.switch.relayUnit.typename = "MacRelayUnit"
-**.switch.macTable.addressTableFile = "switchAddressFile.txt"
 **.switch.eth[7].mac.queue.typename = "CompoundPriorityQueue"
 **.switch.eth[7].mac.queue.classifier.typename = "BehaviorAggregateClassifier"
-**.switch.eth[7].mac.queue.classifier.dscps = "0x08 0x10 0x18"
+**.switch.eth[7].mac.queue.classifier.dscps = "0x08 0x0A 0x0C 0x0E 0x10 0x12 0x14"
+
+[Config Caso1G]
+description = Caso a 1 Gbps
+**.customDatarate = 1
+
+[Config Caso10G]
+description = Caso a 10 Gbps
+**.customDatarate = 10
 
 
