Ready to be sent

--- a/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
+++ b/GabrieleCostanzo_Elaborato_E/simulations/omnetpp.ini
@@ -13,9 +13,9 @@ network = ReteSwitched
 **.host[*].app[0].typename = "UdpBasicApp"
 **.host[*].app[0].destPort = 8000
 **.host[*].app[0].destAddresses = "sinkHost"
-**.host[*].app[0].messageLength = intuniform(100B, 1500B)
-**.host[*].app[0].startTime = uniform(0s, 10ms)
+**.host[*].app[0].startTime = uniform(0us, 7us) # Si cerca di non fare dipendere la simulazione dall'ordine di partenza
 
+# Priorita' degli host decrescente
 **.host[0].app[0].dscp = 0x08
 **.host[1].app[0].dscp = 0x0A
 **.host[2].app[0].dscp = 0x0C
@@ -24,13 +24,6 @@ network = ReteSwitched
 **.host[5].app[0].dscp = 0x12
 **.host[6].app[0].dscp = 0x14
 
-**.host[0].app[0].sendInterval = 5ms
-**.host[1].app[0].sendInterval = 10ms
-**.host[2].app[0].sendInterval = 15ms
-**.host[3].app[0].sendInterval = 20ms
-**.host[4].app[0].sendInterval = 25ms
-**.host[5].app[0].sendInterval = 30ms
-**.host[6].app[0].sendInterval = 35ms
 **.host[0].app[0].packetName = "UDP_Data_Sender0"
 **.host[1].app[0].packetName = "UDP_Data_Sender1"
 **.host[2].app[0].packetName = "UDP_Data_Sender2"
@@ -42,16 +35,45 @@ network = ReteSwitched
 
 #Switch info
 **.switch.relayUnit.typename = "MacRelayUnit"
+# Utilizzo della Queue custom per la coda del sinkHost
 **.switch.eth[7].mac.queue.typename = "CompoundPriorityQueue"
 **.switch.eth[7].mac.queue.classifier.typename = "BehaviorAggregateClassifier"
 **.switch.eth[7].mac.queue.classifier.dscps = "0x08 0x0A 0x0C 0x0E 0x10 0x12 0x14"
 
-[Config Caso1G]
-description = Caso a 1 Gbps
+[Config Caso1G-RndLen]
+description = Caso a 1 Gbps, lunghezza mess. variabile
 **.customDatarate = 1
+**.host[*].app[0].messageLength = intuniform(100B, 1500B)
+**.multiplier = 150
 
-[Config Caso10G]
-description = Caso a 10 Gbps
+[Config Caso1G-1500B]
+description = Caso a 1 Gbps, lungh. 1500B
+**.customDatarate = 1
+**.host[*].app[0].messageLength = 1500B
+**.multiplier = 300
+
+[Config Caso1G-100B]
+description = Caso a 1 Gbps, lungh. 100B
+**.customDatarate = 1
+**.host[*].app[0].messageLength = intuniform(100B, 1500B)
+**.multiplier = 20
+
+[Config Caso10G-RndLen]
+description = Caso a 10 Gbps, lunghezza mess. variabile
 **.customDatarate = 10
+**.host[*].app[0].messageLength = intuniform(100B, 1500B)
+**.multiplier = 15
+
+[Config Caso10G-1500B]
+description = Caso a 10 Gbps, lungh. 1500B
+**.customDatarate = 10
+**.host[*].app[0].messageLength = 1500B
+**.multiplier = 30
+
+[Config Caso10G-100B]
+description = Caso a 10 Gbps, lungh. 100B
+**.customDatarate = 10
+**.host[*].app[0].messageLength = intuniform(100B, 1500B)
+**.multiplier = 2
 
 
